# Ericgram

./: .dockerignore  .gitignore  CMakeLists.txt  DOCUMENTATION.md  Dockerfile  Ericgram  Ericgram_old  README.md  main.cpp  package-lock.json  package.json  render.yaml  server.hpp
frontend/: .env  .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  api.js  index.css  main.jsx  seedDemoData.js
frontend/src/components/: ChatModal.css  ChatModal.jsx  ExplorePage.css  ExplorePage.jsx  FeedPage.css  FeedPage.jsx  InstagramEditProfileModal.css  InstagramEditProfileModal.jsx  LogInGoogle.jsx  LoginPage.css  LoginPage.jsx  MediaFeedPage.css  MediaFeedPage.jsx  MessagesPage.css  MessagesPage.jsx  Navbar.css  Navbar.jsx  ProfileModal.css  ProfileModal.jsx  ProfilePage.css  ProfilePage.jsx  ReactSpringComponent.jsx  ReelsPage.css  ReelsPage.jsx  UserCard.css  UserCard.jsx
frontend/src/utils/: defaultProfilePic.js  profileNavigation.js  userProfilePic.js
